<resources>
    <string name="app_name">Weather_MVVM_practice</string>
    <string name="text_weather_list">Weather List</string>

    <string name="weather_icon">Weather Icon</string>
    <string name="description">description</string>
    <string name="date">date</string>

    <string name="temperature">Temperature: %1$s°C ~ %2$s°C</string>
    <string name="detail">Detail</string>
    <string name="temperature_text">Temperature(°C)</string>
    <string name="temp_kind">%1$s: %2$s</string>

    <string name="day">day</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="night">night</string>
    <string name="eve">eve</string>
    <string name="morn">morn</string>

    <string name="feels_like">Feels Like(°C)</string>
    <string name="others">Others</string>
    <string name="pressure">Pressure: %dhPa</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="dew_point">Dew Point: %.2fkelvin</string>
    <string name="wind_speed">Wind Speed: %.2fmetre/sec</string>
    <string name="wind_deg">Wind Degree: %d(metrological)</string>
    <string name="clouds">Cloudiness: %d%%</string>
    <string name="pop">Probability of Precipitation: %.2f%%</string>
    <string name="uvi">UV Index: %.2f%%</string>


    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications -> Weather_MVVM_practice -> App Permissions and grant access to Location.</string>
    <string name="fetching_location" >Fetching Your Location~!</string>
    <string name="fetching_weather_info" >Fetching Weather Info~!</string>
    <string name="google_map_api_key">should get from Google Api Console!</string>
    
    <string name="set_my_location">Set My Location</string>
    <string name="set_current_location_text">Set Current Location</string>
    <string name="fetch_location_failed">Failed to get your current Location</string>
    <string name="camera_moving">Moving Map</string>
    <string name="cd_today_weather">Today\'s Weather</string>
    <string name="title_today_weather">Today\'s Weather</string>
    <string name="cd_weather_list">Forecast</string>
    <string name="weather_list">Forecast</string>
    <string name="cd_more">More</string>
    <string name="title_more">More</string>

</resources>