<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/today"
        android:icon="@drawable/ic_baseline_wb_sunny_24"
        android:contentDescription="@string/cd_today_weather"
        android:title="@string/title_today_weather" />
    <item
        android:id="@+id/forecast"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:contentDescription="@string/cd_weather_list"
        android:title="@string/weather_list" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:contentDescription="@string/cd_more"
        android:title="@string/title_more" />
</menu>
